Fix fixed-header background flickering

--- a/src/scss/_tabellajs.scss
+++ b/src/scss/_tabellajs.scss
@@ -31,6 +31,15 @@ TABLE HEADER
 	//background-color: #eee;
 	-webkit-box-shadow: 0px 4px 7px 0px rgba(0,0,0,0.1);
   	box-shadow: 0px 4px 7px 0px rgba(0,0,0,0.1);
+
+  	&::before{
+  		position: absolute;
+  		content: '';
+  		top: -1px;
+  		width: 100%;
+  		height: 1px;
+  		background-color: #ccc;
+  	}
 }
 
 /**
